Fix spacing between paragraphs on observation diary messagew

--- a/app/client/views/observations/observations.css
+++ b/app/client/views/observations/observations.css
@@ -101,7 +101,7 @@ div br::after {
 }
 
 #observations-msg p {
-	padding: 10px 0;
+	padding-top: 10px;
 }
 
 #observations-msg p:first-child {
